[tool.poetry]
name = "eluve-poetry-boilerplate"
version = "0.1.0"
description = "Boilerplate repo for Python projects"
authors = ["Paul Mestemaker <PaulMest@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.53.0"
anthropic = "^0.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
